# SORA-AI

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  index.html  netlify.toml  package.json  pyproject.toml  railway.toml
guidelines/: jarvis.md
sora_assistant/: __init__.py  config.py  models.py
sora_assistant/api/: __init__.py  app.py
sora_assistant/assistant_core/: __init__.py  events.py  service.py
sora_assistant/memory/: __init__.py  store.py
sora_assistant/providers/: __init__.py  base.py  elevenlabs_provider.py  fake.py  nvidia_nim_provider.py  nvidia_speech_provider.py  openai_provider.py  registry.py
sora_assistant/voice/: __init__.py  push_to_talk.py  wake_word.py
src/: README.md  index.html  package-lock.json
src/app/: App.tsx
src/app/components/: command-interface.tsx  energy-particles.tsx  grid-overlay.tsx  holographic-rings.tsx  neural-sphere.tsx  ui-panels.tsx
src/app/lib/: assistant-api.ts
src/src/app/: App.tsx
src/src/app/components/: AIOrb.tsx  ChatMessage.tsx  GalaxyField.tsx  HoloPanels.tsx  HoloTranscript.tsx  JARVISSphere.tsx  SettingsModal.tsx  StarField.tsx  VoiceButton.tsx  VoiceVisualizer.tsx
src/src/styles/: theme.css
tests/: test_api_optional.py  test_config.py  test_memory_store.py  test_provider_contracts.py  test_service.py
