[project]
name = "sora-personal-assistant"
version = "0.1.0"
description = "Local-first provider-agnostic personal AI assistant core with voice and explicit memory."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
  "openai>=1.0.0",
  "keyring>=25.0.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
voice = [
  "numpy>=1.26.0",
  "sounddevice>=0.4.6",
  "soundfile>=0.12.1",
]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[project.scripts]
sora-assistant-api = "sora_assistant.api.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
