[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sora-personal-assistant"
version = "0.1.0"
description = "Local personal assistant backend for the SORA/AURA interface"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "keyring>=25,<26",
  "nvidia-riva-client>=2.26,<3",
  "openai>=1.50,<3",
  "pydantic>=2.9,<3",
  "python-multipart>=0.0.9,<1",
  "uvicorn>=0.30,<1",
]

[tool.setuptools.packages.find]
include = ["sora_assistant*"]
